--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="images/favicon.ico" sizes="32x32">
     <link href="app/app.less" type="text/css" rel="stylesheet/less">
     <!-- <base href="/"> -->
 </head>
