--- a/app/userlogs/userlogdialog.tmpl.html
+++ b/app/userlogs/userlogdialog.tmpl.html
@@ -1,7 +1,7 @@
 <md-dialog md-theme="{{$root.themePrimary}}" class="md-whiteframe-z1" style="min-width: 800px; min-height: 626px; overflow: visible"
            ng-click="showEndDatePicker = false; showDatePicker = false; toggleTags = false;">
     <md-toolbar class="md-toolbar-tools md-whiteframe-z1">
-        <span>{{!editMode? 'User Log Editor': 'User Log Viewer'}}</span>
+        <span>{{editMode? 'User Log Editor': 'User Log Viewer'}}</span>
     </md-toolbar>
     <md-dialog-content style="padding: 12px; min-height: 510px" md-theme="{{$root.themePrimaryButtons}}" layout="column">
         <div layout="row">
@@ -48,9 +48,9 @@
             </div>
         </div>
         <div class="md-whiteframe-z1" style="margin: 8px 0" flex>
-            <md-input-container style="margin: 16px 0; min-height: 300px; max-height: 300px" class="md-block" flex>
+            <md-input-container md-is-error="content.length === 0" style="margin: 16px 0; min-height: 300px; max-height: 300px" class="md-block" flex>
                 <label>Log Content</label>
-                <textarea style="width: 100%; height: 300px;" ng-disabled="!editMode" md-select-on-focus rows="10" md-maxlength="1000" ng-model="content"></textarea>
+                <textarea style="overflow-y: scroll; resize: none; width: 100%; min-height: 300px; max-height: 300px; height: 300px" ng-disabled="!editMode" md-select-on-focus rows="10" md-maxlength="10000" ng-model="content"></textarea>
             </md-input-container>
         </div>
 
@@ -108,7 +108,7 @@
             Uploading Files, please wait...
         </span>
         <md-button ng-click="hide()">{{!editMode? 'Close' : 'Cancel'}}</md-button>
-        <md-button ng-hide="!editMode" ng-click="submit()" ng-disabled="endDateTimeError || uploadingFiles || content.length == 0 || !validStartTime || !validEndTime">Submit</md-button>
+        <md-button ng-hide="!editMode" ng-click="submit()" ng-disabled="endDateTimeError || uploadingFiles || content.length == 0 || !validStartTime || !validEndTime || !content">Submit</md-button>
     </md-dialog-actions>
     </div>
 </md-dialog>
