--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -1,7 +1,7 @@
 <div ng-controller="SchedulerHomeCtrl as vm" flex layout="column"
      ng-class="{'connection-lost-bg':vm.connectionLost}" md-theme="{{themePrimary}}">
 
-    <div ng-if="$root.iAmLO || $root.iAmCA" ng-show="!vm.childStateShowing" layout="row" layout-align="center center" ng-class="{'maintenance-bg':subarray.maintenance}"
+    <div ng-show="!vm.childStateShowing" layout="row" layout-align="center center" ng-class="{'maintenance-bg':subarray.maintenance}"
          style="margin: 11px 8px; min-height: 36px;" md-theme="{{themePrimaryButtons}}">
         <md-button style="margin: 0;" title="Schedule Block Drafts"
                    ng-click="$root.stateGo('scheduler.drafts')">
@@ -14,14 +14,14 @@
         </md-button>
     </div>
 
-    <div ng-if="$root.iAmLO || $root.iAmCA" ng-show="!vm.childStateShowing" layout="column" layout-align="center center" class="md-whiteframe-z4"
+    <div ng-show="!vm.childStateShowing" layout="column" layout-align="center center" class="md-whiteframe-z4"
          style="margin: 8px; min-height: 700px;">
         <md-toolbar class="md-toolbar-tools md-whiteframe-z1">
             <span>Subarray Workflow</span>
         </md-toolbar>
         <div style="padding: 24px">
-            <div ng-repeat="subarray in vm.subarrays track by $index" layout="column" layout-align="start center"
-                 class="md-whiteframe-z1" style="margin: 12px 0;" md-theme="{{themePrimaryButtons}}" ng-if="$root.iAmLO || subarray.delegated_ca === $root.currentUser.email">
+            <div ng-repeat="subarray in vm.subarrays | orderBy:'id' track by $index" layout="column" layout-align="start center"
+                 class="md-whiteframe-z1" style="margin: 12px 0;" md-theme="{{themePrimaryButtons}}">
                 <md-toolbar md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}"
                             class="md-whiteframe-z2 md-toolbar-tools-medium" layout="row" layout-align="start center"
                             ng-class="{'md-hue-2': subarray.state !== 'inactive'}">
@@ -66,7 +66,7 @@
         <span style="margin-left: 16px">Loading Subarrays...</span>
     </div>
 
-    <div class="md-whiteframe-z5" ng-if="$root.currentStateName() !== 'scheduler.observations' && !$root.iAmLO && !$root.iAmCA && vm.subarrays.length > 0"
+    <!-- <div class="md-whiteframe-z5" ng-if="$root.currentStateName() !== 'scheduler.observations' && !$root.iAmLO && !$root.iAmCA && vm.subarrays.length > 0"
          style="padding: 32px; margin: 32px; font-size: 18px"
         layout="column" layout-align="center center" md-theme="{{themePrimaryButtons}}">
         <span>You do not have permission to view Subarrays.</span>
@@ -76,7 +76,7 @@
             <div ng-include="'images/subarrays.svg'" class="inline-svg-icon" style="top: 10px; left: 8px;"></div>
             <span style="position: absolute; left: 94px; top: 32px;">Observations Overview</span>
         </md-button>
-    </div>
+    </div> -->
 
-    <div ng-if="$root.iAmLO || $root.iAmCA || $root.currentStateName() === 'scheduler.observations'" ng-show="vm.childStateShowing" ui-view flex layout="column"></div>
+    <div ng-show="vm.childStateShowing && vm.subarrays.length > 0" ui-view flex layout="column"></div>
 </div>
