--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -1,7 +1,7 @@
 <div flex layout="column" style="min-width: 1220px; min-height: 500px; margin-top: 4px;"
      ng-controller="SubArraysCtrl as vm">
 
-    <div layout="row" layout-align="center center" ng-class="{'maintenance-bg':subarray.maintenance}"
+    <div layout="row" layout-align="center center" ng-class="{'maintenance-bg':vm.subarray.maintenance}"
          style="margin: 0 8px; min-height: 50px" md-theme="{{themePrimaryButtons}}">
         <md-button style="margin: 0" title="Schedule Block Drafts"
                    ng-click="$root.stateGo('scheduler.drafts')">
@@ -32,35 +32,32 @@
     </div>
 
     <div flex layout="row" style="margin-top: 16px; max-height: 100%; min-height: 100%;">
-
         <div flex layout="column" style="overflow: auto; padding-left: 4px; margin-right: 4px">
-            <div flex
-                 ng-repeat="subarray in vm.subarrays | filter: (vm.subarray_id || '') && {id: vm.subarray_id} | orderBy:'id'"
-                 class="subarray-container" layout="row"
-                 md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}">
+            <div flex class="subarray-container" layout="row"
+                 md-theme="{{vm.subarray.state === 'inactive'? 'grey' : vm.subarray.state === 'active'? 'green' : vm.subarray.state === 'error'? 'amber' : 'deep-purple'}}">
 
                 <div layout="column" flex>
                     <md-toolbar
-                        md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}"
-                        ng-class="{'md-hue-2': subarray.state !== 'inactive'}" class="md-whiteframe-z1"
-                        layout="row" layout-align="center center" title="{{subarray.description}}"
+                        md-theme="{{vm.subarray.state === 'inactive'? 'grey' : vm.subarray.state === 'active'? 'green' : vm.subarray.state === 'error'? 'amber' : 'deep-purple'}}"
+                        ng-class="{'md-hue-2': vm.subarray.state !== 'inactive'}" class="md-whiteframe-z1"
+                        layout="row" layout-align="center center" title="{{vm.subarray.description}}"
                         style="max-height: 64px; min-height: 64px; position: relative; margin-top: -7px">
-                        <span style="margin-left: 8px;">SUBARRAY {{subarray.id}} -
-                            <span><b>{{subarray.state}}</b></span>
-                            <span ng-if="subarray.maintenance">{{"- in maintenance"}}</span>
+                        <span style="margin-left: 8px;">SUBARRAY {{vm.subarray.id}} -
+                            <span><b>{{vm.subarray.state}}</b></span>
+                            <span ng-if="vm.subarray.maintenance">{{"- in maintenance"}}</span>
                         </span>
                         <span flex></span>
 
                         <div layout="row" layout-align="center center"
                              style="position: absolute; padding: 0; top: 7px; left: 0; right: 0; font-size: 12px">
-                            <span title="Control Authority" style="margin-right: 8px;"><i>CA: </i><b>{{subarray.delegated_ca}}</b></span>
-                            <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{subarray.band ?
-                                subarray.band : 'None'}}</b></span>
-                            <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{subarray.product
-                                ? subarray.product : 'None'}}</b></span>
-                            <span ng-show="subarray.state === 'active' || subarray.config_label"
-                                  title="Config Label"><i>Config Label: </i><b>{{subarray.config_label ?
-                                subarray.config_label : 'None'}}</b></span>
+                            <span title="Control Authority" style="margin-right: 8px;"><i>CA: </i><b>{{vm.subarray.delegated_ca}}</b></span>
+                            <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{vm.subarray.band ?
+                                vm.subarray.band : 'None'}}</b></span>
+                            <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{vm.subarray.product
+                                ? vm.subarray.product : 'None'}}</b></span>
+                            <span ng-show="vm.subarray.state === 'active' || vm.subarray.config_label"
+                                  title="Config Label"><i>Config Label: </i><b>{{vm.subarray.config_label ?
+                                vm.subarray.config_label : 'None'}}</b></span>
                         </div>
 
                         <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
@@ -109,9 +106,9 @@
                     </md-toolbar>
                     <div md-theme="{{themePrimary}}" flex
                                                  class="schedule-draft-data-list md-whiteframe-z1"
-                                                 ng-class="{'maintenance-bg':subarray.maintenance}">
+                                                 ng-class="{'maintenance-bg':vm.subarray.maintenance}">
                         <div
-                            ng-repeat="item in vm.scheduleDraftData | filter:{sub_nr:subarray.id, state:'DRAFT'} | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse track by item.id_code"
+                            ng-repeat="item in vm.scheduleDraftData | filter:{sub_nr:vm.subarray.id, state:'DRAFT'} | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse track by item.id_code"
                             style="padding: 0 4px" flex layout="row" layout-align="start center"
                             ng-click="item.confirmDelete = false; vm.setSelectedScheduleDraft(item)"
                             ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}"
@@ -165,9 +162,9 @@
                         </div>
                     </div>
 
-                    <md-toolbar ng-class="{'md-hue-2': subarray.state !== 'inactive'}" style="margin-top: 8px"
+                    <md-toolbar ng-class="{'md-hue-2': vm.subarray.state !== 'inactive'}" style="margin-top: 8px"
                                 class="md-whiteframe-z1 md-toolbar-tools-medium"
-                                layout="row" layout-align="center center" title="{{subarray.description}}"
+                                layout="row" layout-align="center center" title="{{vm.subarray.description}}"
                                 ng-click="$root.stateGoWithSubId('scheduler.observations.detail', vm.subarray_id)">
                         <span flex style="margin-top: -5px;">Observations</span>
 
@@ -196,7 +193,7 @@
 
                     <div flex md-theme="{{themePrimaryButtons}}" class="schedule-draft-data-list md-whiteframe-z1"
                          style="padding: 0; overflow: auto; min-height: 200px; max-height: 300px"
-                         ng-class="{'maintenance-bg':subarray.maintenance}">
+                         ng-class="{'maintenance-bg':vm.subarray.maintenance}">
                         <div
                             ng-repeat="item in vm.currentScheduleData = (vm.scheduleData | filter:{sub_nr:vm.subarray_id}) track by item.id_code"
                             ng-click="vm.setSelectedSchedule(item);" style="padding: 0 4px"
