--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -1,36 +1,7 @@
 <div flex layout="column"  style="min-width: 1220px; min-height: 400px; margin-top: 4px;"
      ng-controller="SubArrayResourcesCtrl as vm">
 
-    <div layout="row" layout-align="center center" ng-class="{'maintenance-bg':vm.subarray.maintenance}"
-        style="margin: 0 8px; min-height: 50px" md-theme="{{themePrimaryButtons}}">
-        <md-button style="margin: 0" title="Schedule Block Drafts"
-                   ng-click="$root.stateGo('scheduler.drafts')">
-            <span>SB Drafts</span>
-        </md-button>
-        <span flex></span>
-        <div style="border: 8px solid #4CAF50; border-radius: 4px;">
-            <md-button class="md-primary md-raised" style="margin: -1px"
-                       ng-click="$root.stateGo('scheduler')">
-                <span>Set-up Subarray</span>
-            </md-button>
-        </div>
-        <div ng-include="'images/left-arrow.svg'" class="left-arrow-transform-small"></div>
-        <md-button class="md-primary md-raised inline-svg-button" style="margin: 0"
-                   ng-click="$root.stateGoWithSubId('scheduler.subarrays', vm.subarray.id)">
-            <span>Manage Schedule Blocks</span>
-        </md-button>
-        <div ng-include="'images/left-arrow.svg'" class="left-arrow-transform-small"></div>
-        <md-button class="md-primary md-raised" style="margin: 0"
-                   ng-click="$root.stateGoWithSubId('scheduler.observations.detail', vm.subarray.id)">
-            <span>Observations</span>
-        </md-button>
-        <span flex></span>
-        <md-button style="margin: 0" title="All Subarrays Observations Overview"
-                   ng-click="$root.stateGo('scheduler.observations')">
-            <span>Obs Overview</span>
-        </md-button>
-    </div>
-    <div flex layout="row" style="margin-top: 16px" ng-if="vm.subarray">
+    <div flex layout="row" style="margin-top: 16px">
         <div flex layout="column" style="overflow: auto; padding: 0 8px">
             <div class="subarray-container" layout="row"
                 style="min-width: 650px; position: relative" flex>
@@ -40,12 +11,24 @@
                         md-theme="{{vm.subarray.state === 'inactive'? 'grey' : vm.subarray.state === 'active'? 'green' : vm.subarray.state === 'error'? 'amber' : 'deep-purple'}}"
                         ng-class="{'md-hue-2': vm.subarray.state !== 'inactive'}" class="md-whiteframe-z1"
                         layout="row" layout-align="center center" title="{{vm.subarray.description}}"
-                        style="max-height: 50px; min-height: 50px; position: relative"
-                        ng-click="$root.stateGoWithSubId('scheduler.observations.detail', vm.subarray.id)">
-                        <span style="margin-left: 8px">SUBARRAY {{vm.subarray.id}} -
-                            <span><b>{{vm.subarray.state}}</b></span>
-                            <span ng-if="vm.subarray.maintenance">{{"- in maintenance"}}</span>
-                        </span>
+                        style="max-height: 50px; min-height: 50px; position: relative">
+                        <md-menu style="margin: 0; padding: 0;">
+                            <md-button class="subarray-config-menu-button" title="Change Subarray" ng-click="$mdOpenMenu(); $event.stopPropagation()"
+                                style="color: currentColor !important; font-size: inherit">
+                                <span style="margin-left: 8px">
+                                    SUBARRAY {{vm.subarray.id}} -
+                                    <span><b>{{vm.subarray.state}}</b></span>
+                                    <span ng-if="vm.subarray.maintenance">{{"- in maintenance"}}</span>
+                                </span>
+                            </md-button>
+                            <md-menu-content style="padding: 8px;">
+                                <md-menu-item ng-repeat="subarray in parentScope.vm.subarrays | orderBy:'id' track by $index">
+                                    <md-button ng-click="parentScope.vm.stateGo('scheduler.resources', subarray.id)">
+                                        <span>Subarray {{subarray.id}}</span>
+                                    </md-button>
+                                </md-menu-item>
+                            </md-menu-content>
+                        </md-menu>
                         <div style="left: 0; bottom: 0; position: absolute; height: 12px" layout="row">
                             <span style="font-size: 10px; margin-right: 2px;" title="Resources in Maintenance">Maint.</span>
                             <span style="font-size: 10px;" title="Resources Marked as Faulty">Faulty</span>
@@ -54,30 +37,65 @@
                         <span flex></span>
 
                         <div layout="row" layout-align="center center" style="position: absolute; padding: 0; top: 0; left: 0; right: 0; font-size: 12px">
-                            <span title="Control Authority" style="margin-right: 8px;"><i>CA: </i><b>{{vm.subarray.delegated_ca}}</b></span>
-                            <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{vm.subarray.band ? vm.subarray.band : 'None'}}</b></span>
-                            <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{vm.subarray.product ? vm.subarray.product : 'None'}}</b></span>
-                            <span ng-show="vm.subarray.state === 'active' || vm.subarray.config_label"
-                                  title="Config Label"><i>Config Label: </i><b>{{vm.subarray.config_label ? vm.subarray.config_label : 'None'}}</b></span>
+                            <md-menu style="margin: 0; padding: 0;">
+                                <md-button ng-disabled="!$root.expertOrLO && !parentScope.iAmCA" class="subarray-config-menu-button" title="Control Authority" ng-click="$mdOpenMenu()"
+                                    style="color: currentColor !important">
+                                    <i>CA: </i><b>{{vm.subarray.delegated_ca}}</b>
+                                </md-button>
+                                <md-menu-content style="padding: 8px;">
+                                    <md-menu-item ng-repeat="user in parentScope.vm.users | orderBy:'email' track by $index">
+                                        <md-button ng-click="parentScope.vm.delegateControl(user.email)">
+                                            <span>{{user.email}}</span>
+                                        </md-button>
+                                    </md-menu-item>
+                                </md-menu-content>
+                            </md-menu>
+                            <md-menu style="margin: 0; padding: 0;">
+                                <md-button ng-disabled="!$root.expertOrLO && !parentScope.iAmCA" class="subarray-config-menu-button" title="Selected Band" ng-click="$mdOpenMenu()"
+                                    style="color: currentColor !important">
+                                    <i>Band: </i><b>{{vm.subarray.band ? vm.subarray.band : 'None'}}</b>
+                                </md-button>
+                                <md-menu-content style="padding: 8px;">
+                                    <md-menu-item ng-repeat="band in parentScope.vm.bands | orderBy:band track by $index">
+                                        <md-button ng-click="parentScope.vm.setBand(band)">
+                                            <span>{{band}}</span>
+                                        </md-button>
+                                    </md-menu-item>
+                                </md-menu-content>
+                            </md-menu>
+                            <md-menu style="margin: 0; padding: 0;">
+                                <md-button ng-disabled="!$root.expertOrLO && !parentScope.iAmCA" class="subarray-config-menu-button" title="Selected Product" ng-click="$mdOpenMenu()"
+                                    style="color: currentColor !important">
+                                    <i>Product: </i><b>{{vm.subarray.product ? vm.subarray.product : 'None'}}</b>
+                                </md-button>
+                                <md-menu-content style="padding: 8px;">
+                                    <md-menu-item ng-repeat="product in parentScope.vm.products | orderBy:product:true track by $index">
+                                        <md-button ng-click="parentScope.vm.setProduct(product)">
+                                            <span>{{product}}</span>
+                                        </md-button>
+                                    </md-menu-item>
+                                </md-menu-content>
+                            </md-menu>
+                            <span ng-show="vm.subarray.config_label" title="Config Label"><i>Config Label: </i><b>{{vm.subarray.config_label ? vm.subarray.config_label : 'None'}}</b></span>
                         </div>
-                        <md-button ng-if="$root.expertUser" class="md-icon-button inline-action-button"
-                                   ng-click="vm.setSubarrayInMaintenance(subarray); $event.stopPropagation()"
+                        <md-button ng-if="$root.expertOrLO" class="md-icon-button inline-action-button"
+                                   ng-click="vm.setSubarrayInMaintenance()"
                                    title="Set Subarray in Maintenance" style="margin-top: 16px;">
                             <md-icon class="fa" md-font-icon="fa-wrench"></md-icon>
                         </md-button>
-                        <md-button ng-if="$root.expertUser || $root.iAmCA" class="md-icon-button inline-action-button" ng-click="vm.freeSubarray(subarray); $event.stopPropagation()"
+                        <md-button ng-if="$root.expertOrLO || parentScope.vm.iAmCA" class="md-icon-button inline-action-button" ng-click="vm.freeSubarray()"
                                    title="Free Subarray" style="margin-top: 16px;">
                             <md-icon class="fa" md-font-icon="fa-recycle"></md-icon>
                         </md-button>
-                        <md-button ng-if="$root.expertUser" ng-show="vm.subarray.state === 'inactive'" class="md-icon-button inline-action-button"
-                                   ng-click="vm.activateSubarray(subarray); $event.stopPropagation()"
+                        <md-button ng-if="$root.expertOrLO && vm.subarray.state === 'inactive'" class="md-icon-button inline-action-button"
+                                   ng-click="vm.activateSubarray()"
                                    title="Activate Subarray" style="margin-top: 16px;">
                             <md-icon class="fa" md-font-icon="fa-power-off"></md-icon>
                         </md-button>
 
-                        <md-menu ng-if="$root.expertUser" ng-if="vm.subarray.state !== 'active'" md-theme="{{themePrimary}}"
+                        <md-menu ng-if="$root.expertOrLO" ng-if="vm.subarray.state !== 'active'" md-theme="{{themePrimary}}"
                                  style="margin-top: 16px; margin-bottom: 0; padding: 0;">
-                            <md-button class="md-icon-button inline-action-button" ng-click="$mdOpenMenu(); $event.stopPropagation()">
+                            <md-button class="md-icon-button inline-action-button" ng-click="$mdOpenMenu()">
                                 <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
                             </md-button>
                             <md-menu-content style="padding: 8px;">
@@ -88,31 +106,31 @@
                                     </md-button>
                                 </md-menu-item>
                                 <md-menu-item>
-                                    <md-button ng-click="vm.openBandsDialog(vm.subarray.id, $event)"
+                                    <md-button ng-if="$root.expertOrLO || parentScope.iAmCA" ng-click="parentScope.vm.openBandsDialog($event)"
                                                title="Select a Band">
                                         <span>Select Band...</span>
                                     </md-button>
                                 </md-menu-item>
                                 <md-menu-item>
-                                    <md-button ng-click="vm.openProductsDialog(vm.subarray.id, $event)"
+                                    <md-button ng-if="$root.expertOrLO || parentScope.iAmCA" ng-click="parentScope.vm.openProductsDialog($event)"
                                                title="Select a Product">
                                         <span>Select Product...</span>
                                     </md-button>
                                 </md-menu-item>
-                                <md-menu-item ng-if="$root.expertUser">
-                                    <md-button ng-click="vm.openCADialog(vm.subarray.id, $event)"
+                                <md-menu-item ng-if="$root.expertOrLO">
+                                    <md-button ng-click="parentScope.vm.openCADialog($event)"
                                                title="Select a Control Authority">
                                         <span>Select Control Authority...</span>
                                     </md-button>
                                 </md-menu-item>
                                 <md-menu-item>
-                                    <md-button ng-click="vm.saveTemplateDialog(subarray, $event)"
+                                    <md-button ng-if="$root.expertOrLO || parentScope.iAmCA" ng-click="vm.saveTemplateDialog($event)"
                                                title="Select a Control Authority">
                                         <span>Save Resource Template...</span>
                                     </md-button>
                                 </md-menu-item>
-                                <md-menu-item ng-show="vm.subarray.state === 'inactive'">
-                                    <md-button ng-click="vm.openTemplateListDialog(subarray, $event)"
+                                <md-menu-item ng-if="$root.expertOrLO || parentScope.iAmCA" ng-show="vm.subarray.state === 'inactive'">
+                                    <md-button ng-click="vm.openTemplateListDialog($event)"
                                                title="Select a Control Authority">
                                         <span>Load Resource Template...</span>
                                     </md-button>
@@ -136,9 +154,9 @@
                         </span>
                             <span flex style="margin-left: 4px; font-size:14px"
                                   ng-class="{'error-text':resource.state === 'faulty', 'maintenance-text':resource.maintenance}">{{resource.name}}</span>
-                            <md-button ng-if="$root.expertUser" ng-show="vm.subarray.maintenance && resource.maintenance"
+                            <md-button ng-if="$root.expertOrLO" ng-show="vm.subarray.maintenance && resource.maintenance"
                                        class="md-icon-button inline-action-button"
-                                       ng-click="vm.listResourceMaintenanceDevicesDialog(subarray, resource, $event); $event.stopPropagation()"
+                                       ng-click="vm.listResourceMaintenanceDevicesDialog(resource, $event); $event.stopPropagation()"
                                        title="Restart Maintenance Device" style="margin: 0">
                                 <md-icon class="fa" md-font-icon="fa-refresh"></md-icon>
                             </md-button>
@@ -147,8 +165,8 @@
                                        title="Mark Resource As Faulty">
                                 <md-icon class="fa" md-font-icon="fa-exclamation-circle"></md-icon>
                             </md-button>
-                            <md-button ng-if="$root.expertUser" class="md-icon-button inline-action-button"
-                                       ng-click="vm.freeAssignedResource(subarray, resource); $event.stopPropagation()"
+                            <md-button ng-if="$root.expertOrLO" class="md-icon-button inline-action-button"
+                                       ng-click="vm.freeAssignedResource(resource); $event.stopPropagation()"
                                        title="Free Assigned Resource">
                                 <md-icon class="fa" md-font-icon="fa-minus"></md-icon>
                             </md-button>
@@ -158,8 +176,8 @@
 
                 <md-button md-theme="{{themePrimaryButtons}}" class="md-raised md-primary"
                            style="min-height: 100%; max-width: 31px; min-width: 31px; margin-left: 4px;"
-                           ng-show="$root.expertUser"
-                           ng-click="vm.assignSelectedResources(subarray);" title="Assign Resources to Subarray">
+                           ng-show="$root.expertOrLO"
+                           ng-click="vm.assignSelectedResources();" title="Assign Resources to Subarray">
                     <md-icon class="fa" md-font-icon="fa-chevron-left" style="width: auto; height: auto;"></md-icon>
                 </md-button>
 
@@ -201,12 +219,12 @@
                     </span>
                         <span flex style="font-size:18px; margin-left: 4px;"
                               ng-class="{'error-text':resource.faulty, 'maintenance-text':resource.maintenance}">{{resource.name}}</span>
-                        <md-button ng-show="$root.expertUser" class="md-icon-button inline-action-button"
+                        <md-button ng-show="$root.expertOrLO" class="md-icon-button inline-action-button"
                                    ng-click="vm.markResourceInMaintenance(resource); $event.stopPropagation()"
                                    title="Mark Resource in Maintenance" style="margin: 0">
                             <md-icon class="fa" md-font-icon="fa-wrench"></md-icon>
                         </md-button>
-                        <md-button ng-show="$root.expertUser" class="md-icon-button inline-action-button"
+                        <md-button ng-show="$root.expertOrLO" class="md-icon-button inline-action-button"
                                    ng-click="vm.markResourceFaulty(resource); $event.stopPropagation()"
                                    title="Mark Resource As Faulty" style="margin: 0">
                             <md-icon class="fa" md-font-icon="fa-exclamation-circle"></md-icon>
