added sensor groups display

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 <script src="app/health/subarray-health/subarray-health.js"></script>
 <script src="app/sensor-graph/sensor-graph.js"></script>
 <script src="app/sensor-list/sensor-list.js"></script>
+<script src="app/sensor-groups/sensor-groups.js"></script>
 <script src="app/admin/admin.js"></script>
 <script src="app/alarms/alarms.js"></script>
 <script src="app/alarms/alarms-notify.js"></script>
@@ -210,6 +211,11 @@
                 <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('sensor-list')">
                         <md-button flex><span class="fa fa-th-list"></span><span>Sensor List</span></md-button>
+                    </md-item-content>
+                </md-item>
+                <md-item>
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('sensor-groups')">
+                        <md-button flex><span class="fa fa-list-alt"></span><span>Sensor Groups</span></md-button>
                     </md-item-content>
                 </md-item>
                 <md-item>
