better error reporting in scheduler; better button disabling in operator controls

--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -10,12 +10,12 @@
             </div>
         </md-toolbar>
         <div md-theme="{{themePrimaryButtons}}" class="operator-controls">
-            <md-button ng-disabled="vm.waitingForRequestResult && vm.canIntervene" ng-click="vm.inhibitAll()" class="md-raised md-primary">Inhibit All</md-button>
-            <md-button ng-disabled="vm.waitingForRequestResult && vm.canIntervene" ng-click="vm.stowAll()" class="md-raised md-primary">Stow All</md-button>
-            <md-button ng-disabled="vm.waitingForRequestResult && vm.canIntervene" ng-click="vm.stopAll()" class="md-raised md-primary">Stop Observations</md-button>
-            <md-button ng-disabled="vm.waitingForRequestResult && vm.canIntervene" ng-click="vm.resumeOperations()" class="md-raised md-primary">Resume Operations</md-button>
-            <md-button ng-disabled="vm.waitingForRequestResult && !$root.expertOrLO" ng-click="vm.shutdownSPCorr($event)" class="md-raised md-primary">Power Down SP & CORR</md-button>
-            <md-button ng-disabled="vm.waitingForRequestResult && vm.canIntervene" ng-click="vm.shutdownComputing($event)" class="md-raised md-primary">Shutdown Computing</md-button>
+            <md-button ng-disabled="vm.waitingForRequestResult || !vm.canIntervene" ng-click="vm.inhibitAll()" class="md-raised md-primary">Inhibit All</md-button>
+            <md-button ng-disabled="vm.waitingForRequestResult || !vm.canIntervene" ng-click="vm.stowAll()" class="md-raised md-primary">Stow All</md-button>
+            <md-button ng-disabled="vm.waitingForRequestResult || !vm.canIntervene" ng-click="vm.stopAll()" class="md-raised md-primary">Stop Observations</md-button>
+            <md-button ng-disabled="vm.waitingForRequestResult || !vm.canIntervene" ng-click="vm.resumeOperations()" class="md-raised md-primary">Resume Operations</md-button>
+            <md-button ng-disabled="vm.waitingForRequestResult || !$root.expertOrLO" ng-click="vm.shutdownSPCorr($event)" class="md-raised md-primary">Power Down SP & CORR</md-button>
+            <md-button ng-disabled="vm.waitingForRequestResult || !vm.canIntervene" ng-click="vm.shutdownComputing($event)" class="md-raised md-primary">Shutdown Computing</md-button>
         </div>
 
         <md-list class="receptor-state-list">
